# kbo-crawl

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  styles.css
src/kbo_crawler/: __init__.py  api.py  cli.py  config.py  crawler.py  database.py  metadata.py  models.py  parser.py  webforms.py
tests/: test_api.py
